@@ -1,4 +1,4 @@
 [Thumbnailer Entry]
 TryExec=@CMAKE_PROJECT_NAME@-@NAME@
 Exec=@CMAKE_PROJECT_NAME@-@NAME@ -s %s %i %o
-MimeType=application/x-aos-vxl;application/x-cc-vxl;application/x-slab6;application/x-build-engine;application/x-cubeworld;application/x-binvox;application/x-magicavoxel;application/x-qubicle-binary;application/x-qubicle-tree;application/x-sandbox-voxedit
+MimeType=application/x-qubicle-exchange;application/x-aos-vxl;application/x-cc-vxl;application/x-slab6;application/x-build-engine;application/x-cubeworld;application/x-binvox;application/x-magicavoxel;application/x-qubicle-binary;application/x-qubicle-tree;application/x-sandbox-voxedit
