@@ -26,6 +26,13 @@
     </magic>
     <glob pattern="*.qbt"/>
   </mime-type>
+  <mime-type type="application/x-qubicle-exchange">
+    <comment>Voxel model Qubicle Exchange Format</comment>
+    <magic priority="50">
+      <match type="string" offset="0" value="Qubicle Exchange Format"/>
+    </magic>
+    <glob pattern="*.qef"/>
+  </mime-type>
   <mime-type type="application/x-sandbox-voxedit">
     <comment>Voxel model Sandbox VoxEdit</comment>
     <glob pattern="*.vxm"/>
