@@ -22,6 +22,7 @@ vengi (0.0.5.0-1) UNRELEASED; urgency=low
   * Support automatic loading different volume formats for assets
   * Support Command&Conquer vxl files
   * Support Ace of Spades map files (vxl)
+  * Support Qubicle exchange format (qef)
   * Perform mesh extraction in dedicated threads for simple volume rendering
   * Improved gizmo rendering and translation support
   * Fixed memory leaks on shutdown
